# c-rust-logging

./: LICENSE  README.md  run.sh
c_proj/: CMakeLists.txt
c_proj/include/: log.h
c_proj/src/: log.c  main.c
log_lib/: Cargo.toml
log_lib/src/: level.rs  lib.rs
